--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,8 @@
-# macOS
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Xcode
-build/
-DerivedData/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
+/.build
+/Packages
 xcuserdata/
-*.xcscmblueprint
-
-# Swift Package Manager
-.swiftpm/
-.build/
-
-# CocoaPods
-Pods/
-
-# Carthage
-Carthage/Build/
-
-# Fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots/
-fastlane/test_output/
-
-# Archives
-*.xcarchive
-
-# Other
-*.moved-aside
-*.xcuserstate
-
-# App packaging
-*.ipa
-*.dSYM.zip
-*.dSYM
-
-# Playground
-timeline.xctimeline
-playground.xcworkspace
-
-# System
-Icon?
-._*
-.Spotlight-V100
-.Trashes
-
-# User-specific
-*.swp
-*.swo
-*~ 
+DerivedData/
+.swiftpm/configuration/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.netrc
